[gd_scene load_steps=9 format=4 uid="uid://coy5ww7r67sk2"]

[ext_resource type="PackedScene" uid="uid://coxtxpj8ay5h5" path="res://scenes/player.tscn" id="1_lms4r"]
[ext_resource type="Script" path="res://scripts/random_event.gd" id="1_ss7xc"]
[ext_resource type="PackedScene" uid="uid://n43ef13rao3h" path="res://scenes/enemies/enemy.tscn" id="2_3dkm2"]
[ext_resource type="Texture2D" uid="uid://cbd7sikanj1cn" path="res://assets/32rogues/tiles.png" id="2_trmf0"]
[ext_resource type="PackedScene" uid="uid://cpqr57jvspow8" path="res://scenes/GUI/player_died.tscn" id="4_ahxs1"]
[ext_resource type="FontFile" uid="uid://bfq4w63uob47b" path="res://assets/alagard.ttf" id="5_nvkye"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_nebwm"]
texture = ExtResource("2_trmf0")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
0:3/0 = 0
1:3/0 = 0
0:4/0 = 0
1:4/0 = 0
0:5/0 = 0
1:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
0:18/0 = 0
1:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
8:19/0 = 0
9:19/0 = 0
10:19/0 = 0
11:19/0 = 0
12:19/0 = 0
13:19/0 = 0
14:19/0 = 0
15:19/0 = 0
0:20/0 = 0
1:20/0 = 0
0:21/0 = 0
1:21/0 = 0
0:22/0 = 0
1:22/0 = 0

[sub_resource type="TileSet" id="TileSet_k6v4e"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_nebwm")

[node name="Random Event" type="Node2D"]
script = ExtResource("1_ss7xc")

[node name="Enemy" parent="." instance=ExtResource("2_3dkm2")]
position = Vector2(3099, 565)

[node name="Player" parent="." instance=ExtResource("1_lms4r")]
position = Vector2(974, 483)

[node name="Background" type="Node2D" parent="."]
position = Vector2(789, 30)

[node name="F1" type="Node2D" parent="Background"]

[node name="Dungeon1" type="TileMapLayer" parent="Background/F1"]
position = Vector2(12, -28)
scale = Vector2(5, 5)
tile_map_data = PackedByteArray("AAD7/wYAAAAAAAYAAAD6////AAAAAAEAAAD6/wAAAAAAAAEAAAD6/wEAAAABAAEAAAD6/wIAAAAAAAYAAAD6/wMAAAAAAAYAAAD6/wQAAAAAAAYAAAD6/wUAAAAAAAYAAAD6/wYAAAAAAAYAAAD6/wcAAAAAAAYAAAD7////AAAAAAEAAAD7/wAAAAAAAAEAAAD7/wEAAAABAAEAAAD7/wIAAAAAAAYAAAD7/wMAAAAAAAYAAAD7/wQAAAACAAcAAAD7/wUAAAAAAAYAAAD7/wcAAAAAAAYAAAD8////AAAAAAEAAAD8/wAAAAAAAAEAAAD8/wEAAAABAAEAAAD8/wIAAAAAAAYAAAD8/wMAAAAAAAYAAAD8/wQAAAAAAAYAAAD8/wUAAAACAAoAAAD8/wYAAAAAAAYAAAD8/wcAAAAAAAYAAAD9////AAAAAAEAAAD9/wAAAAAAAAEAAAD9/wEAAAABAAEAAAD9/wIAAAACAAcAAAD9/wMAAAAAAAYAAAD9/wQAAAAAAAYAAAD9/wUAAAAAAAYAAAD9/wYAAAAAAAYAAAD9/wcAAAAAAAYAAAD+////AAAAAAEAAAD+/wAAAAAAAAEAAAD+/wEAAAABAAEAAAD+/wIAAAAAAAYAAAD+/wMAAAAAAAYAAAD+/wQAAAAAAAYAAAD+/wUAAAAAAAYAAAD+/wYAAAAAAAYAAAD+/wcAAAAAAAYAAAD/////AAAAAAEAAAD//wAAAAAAAAEAAAD//wEAAAABAAEAAAD//wIAAAAAAAYAAAD//wMAAAADAAYAAAD//wQAAAAAAAYAAAD//wUAAAAAAAYAAAD//wYAAAAAAAYAAAD//wcAAAAAAAYAAAAAAP//AAAAAAEAAAAAAAAAAAAAAAEAAAAAAAEAAAABAAEAAAAAAAIAAAAAAAYAAAAAAAMAAAAAAAYAAAAAAAQAAAAAAAYAAAAAAAUAAAAAAAYAAAAAAAYAAAAAAAYAAAAAAAcAAAAAAAYAAAABAP//AAAAAAEAAAABAAAAAAAAAAEAAAABAAEAAAABAAEAAAABAAIAAAAAAAYAAAABAAMAAAAAAAYAAAABAAQAAAACAAkAAAABAAUAAAAAAAYAAAABAAYAAAAAAAYAAAABAAcAAAAAAAYAAAACAP//AAAAAAEAAAACAAAAAAAAAAEAAAACAAEAAAABAAEAAAACAAIAAAAAAAYAAAACAAMAAAAAAAYAAAACAAQAAAAAAAYAAAACAAUAAAAAAAYAAAACAAYAAAAAAAYAAAACAAcAAAAAAAYAAAADAP//AAAAAAEAAAADAAAAAAAAAAEAAAADAAEAAAABAAEAAAADAAIAAAADAAkAAAADAAMAAAAAAAYAAAADAAQAAAAAAAYAAAADAAUAAAADAAoAAAADAAYAAAAAAAYAAAADAAcAAAAAAAYAAAAEAP//AAAAAAEAAAAEAAAAAAAAAAEAAAAEAAEAAAABAAEAAAAEAAIAAAAAAAYAAAAEAAMAAAAAAAYAAAAEAAQAAAAAAAYAAAAEAAUAAAAAAAYAAAAEAAYAAAAAAAYAAAAEAAcAAAAAAAYAAAAFAP//AAAAAAEAAAAFAAAAAAAAAAEAAAAFAAEAAAABAAEAAAAFAAIAAAAAAAYAAAAFAAMAAAAAAAYAAAAFAAQAAAAAAAYAAAAFAAUAAAAAAAYAAAAFAAYAAAAAAAYAAAAFAAcAAAAAAAYAAAAGAP//AAAAAAEAAAAGAAAAAAAAAAEAAAAGAAEAAAABAAEAAAAGAAIAAAAAAAYAAAAGAAMAAAAAAAYAAAAGAAQAAAAAAAYAAAAGAAUAAAAAAAYAAAAGAAYAAAAAAAYAAAAGAAcAAAAAAAYAAAAHAP//AAAAAAEAAAAHAAAAAAAAAAEAAAAHAAEAAAABAAEAAAAHAAIAAAACAAcAAAAHAAMAAAAAAAYAAAAHAAQAAAADAAYAAAAHAAUAAAAAAAYAAAAHAAYAAAAAAAYAAAAHAAcAAAAAAAYAAAAIAP//AAAAAAEAAAAIAAAAAAAAAAEAAAAIAAEAAAABAAEAAAAIAAIAAAAAAAYAAAAIAAMAAAAAAAYAAAAIAAQAAAAAAAYAAAAIAAUAAAAAAAYAAAAIAAYAAAAAAAYAAAAIAAcAAAAAAAYAAAA=")
tile_set = SubResource("TileSet_k6v4e")

[node name="DungeonTilesDetails" type="TileMapLayer" parent="Background/F1/Dungeon1"]
tile_map_data = PackedByteArray("AAD9/wEAAAAGABAAAAAEAAIAAAAHABAAAAD//wIAAAAEABEAAAD//wUAAAABABYAAAACAAMAAAAAABQAAAADAAQAAAABABUAAAD8/wMAAAAAABUAAAABAAYAAAAKABMAAAA=")
tile_set = SubResource("TileSet_k6v4e")

[node name="F2" type="Node2D" parent="Background"]
visible = false

[node name="Dungeon1" type="TileMapLayer" parent="Background/F2"]
position = Vector2(12, -28)
scale = Vector2(5, 5)
tile_map_data = PackedByteArray("AAD7/wYAAAAAAA8AAAD6////AAAAAAMAAAD6/wAAAAAAAAMAAAD6/wEAAAABAAMAAAD6/wIAAAAAAA8AAAD6/wMAAAAAAA8AAAD6/wQAAAAAAA8AAAD6/wUAAAAAAA8AAAD6/wYAAAAAAA8AAAD6/wcAAAAAAA8AAAD7////AAAAAAMAAAD7/wAAAAAAAAMAAAD7/wEAAAABAAMAAAD7/wIAAAAAAA8AAAD7/wMAAAAAAA8AAAD7/wQAAAAAAA8AAAD7/wUAAAAAAA8AAAD7/wcAAAAAAA8AAAD8////AAAAAAMAAAD8/wAAAAAAAAMAAAD8/wEAAAABAAMAAAD8/wIAAAAAAA8AAAD8/wMAAAAAAA8AAAD8/wQAAAAAAA8AAAD8/wUAAAAAAA8AAAD8/wYAAAAAAA8AAAD8/wcAAAAAAA8AAAD9////AAAAAAMAAAD9/wAAAAAAAAMAAAD9/wEAAAABAAMAAAD9/wIAAAAAAA8AAAD9/wMAAAAAAA8AAAD9/wQAAAAAAA8AAAD9/wUAAAAAAA8AAAD9/wYAAAAAAA8AAAD9/wcAAAAAAA8AAAD+////AAAAAAMAAAD+/wAAAAAAAAMAAAD+/wEAAAABAAMAAAD+/wIAAAAAAA8AAAD+/wMAAAAAAA8AAAD+/wQAAAAAAA8AAAD+/wUAAAAAAA8AAAD+/wYAAAAAAA8AAAD+/wcAAAAAAA8AAAD/////AAAAAAMAAAD//wAAAAAAAAMAAAD//wEAAAABAAMAAAD//wIAAAAAAA8AAAD//wMAAAAAAA8AAAD//wQAAAAAAA8AAAD//wUAAAAAAA8AAAD//wYAAAAAAA8AAAD//wcAAAAAAA8AAAAAAP//AAAAAAMAAAAAAAAAAAAAAAMAAAAAAAEAAAABAAMAAAAAAAIAAAAAAA8AAAAAAAMAAAAAAA8AAAAAAAQAAAAAAA8AAAAAAAUAAAAAAA8AAAAAAAYAAAAAAA8AAAAAAAcAAAAAAA8AAAABAP//AAAAAAMAAAABAAAAAAAAAAMAAAABAAEAAAABAAMAAAABAAIAAAAAAA8AAAABAAMAAAAAAA8AAAABAAQAAAAAAA8AAAABAAUAAAAAAA8AAAABAAYAAAAAAA8AAAABAAcAAAAAAA8AAAACAP//AAAAAAMAAAACAAAAAAAAAAMAAAACAAEAAAABAAMAAAACAAIAAAAAAA8AAAACAAMAAAAAAA8AAAACAAQAAAAAAA8AAAACAAUAAAAAAA8AAAACAAYAAAAAAA8AAAACAAcAAAAAAA8AAAADAP//AAAAAAMAAAADAAAAAAAAAAMAAAADAAEAAAABAAMAAAADAAIAAAAAAA8AAAADAAMAAAAAAA8AAAADAAQAAAAAAA8AAAADAAUAAAAAAA8AAAADAAYAAAAAAA8AAAADAAcAAAAAAA8AAAAEAP//AAAAAAMAAAAEAAAAAAAAAAMAAAAEAAEAAAABAAMAAAAEAAIAAAAAAA8AAAAEAAMAAAAAAA8AAAAEAAQAAAAAAA8AAAAEAAUAAAAAAA8AAAAEAAYAAAAAAA8AAAAEAAcAAAAAAA8AAAAFAP//AAAAAAMAAAAFAAAAAAAAAAMAAAAFAAEAAAABAAMAAAAFAAIAAAAAAA8AAAAFAAMAAAAAAA8AAAAFAAQAAAAAAA8AAAAFAAUAAAAAAA8AAAAFAAYAAAAAAA8AAAAFAAcAAAAAAA8AAAAGAP//AAAAAAMAAAAGAAAAAAAAAAMAAAAGAAEAAAABAAMAAAAGAAIAAAAAAA8AAAAGAAMAAAAAAA8AAAAGAAQAAAAAAA8AAAAGAAUAAAAAAA8AAAAGAAYAAAAAAA8AAAAGAAcAAAAAAA8AAAAHAP//AAAAAAMAAAAHAAAAAAAAAAMAAAAHAAEAAAABAAMAAAAHAAIAAAAAAA8AAAAHAAMAAAAAAA8AAAAHAAQAAAAAAA8AAAAHAAUAAAAAAA8AAAAHAAYAAAAAAA8AAAAHAAcAAAAAAA8AAAAIAP//AAAAAAMAAAAIAAAAAAAAAAMAAAAIAAEAAAABAAMAAAAIAAIAAAAAAA8AAAAIAAMAAAAAAA8AAAAIAAQAAAAAAA8AAAAIAAUAAAAAAA8AAAAIAAYAAAAAAA8AAAAIAAcAAAAAAA8AAAA=")
tile_set = SubResource("TileSet_k6v4e")

[node name="DungeonTilesDetails" type="TileMapLayer" parent="Background/F2/Dungeon1"]
tile_map_data = PackedByteArray("AAD+/wEAAAAFABAAAAD8/wIAAAAHABAAAAAEAAIAAAACABEAAAAHAAIAAAAEABMAAAADAAYAAAABABMAAAD//wIAAAAAABMAAAD8/wMAAAADABMAAAAHAAQAAAABABUAAAD//wQAAAABABQAAAAAAAYAAAACABMAAAA=")
tile_set = SubResource("TileSet_k6v4e")

[node name="F3" type="Node2D" parent="Background"]
visible = false

[node name="Dungeon1" type="TileMapLayer" parent="Background/F3"]
position = Vector2(12, -28)
scale = Vector2(5, 5)
tile_map_data = PackedByteArray("AAD7/wYAAAAAAAcAAAD6////AAAAAAUAAAD6/wAAAAAAAAUAAAD6/wEAAAABAAUAAAD6/wIAAAAAAAcAAAD6/wMAAAAAAAcAAAD6/wQAAAAAAAcAAAD6/wUAAAAAAAcAAAD6/wYAAAAAAAcAAAD6/wcAAAAAAAcAAAD7////AAAAAAUAAAD7/wAAAAAAAAUAAAD7/wEAAAABAAUAAAD7/wIAAAAAAAcAAAD7/wMAAAAAAAcAAAD7/wQAAAAAAAcAAAD7/wUAAAAAAAcAAAD7/wcAAAAAAAcAAAD8////AAAAAAUAAAD8/wAAAAAAAAUAAAD8/wEAAAABAAUAAAD8/wIAAAAAAAcAAAD8/wMAAAAAAAcAAAD8/wQAAAAAAAcAAAD8/wUAAAAAAAcAAAD8/wYAAAAAAAcAAAD8/wcAAAAAAAcAAAD9////AAAAAAUAAAD9/wAAAAAAAAUAAAD9/wEAAAABAAUAAAD9/wIAAAAAAAcAAAD9/wMAAAAAAAcAAAD9/wQAAAAAAAcAAAD9/wUAAAAAAAcAAAD9/wYAAAAAAAcAAAD9/wcAAAAAAAcAAAD+////AAAAAAUAAAD+/wAAAAAAAAUAAAD+/wEAAAABAAUAAAD+/wIAAAAAAAcAAAD+/wMAAAAAAAcAAAD+/wQAAAAAAAcAAAD+/wUAAAAAAAcAAAD+/wYAAAAAAAcAAAD+/wcAAAAAAAcAAAD/////AAAAAAUAAAD//wAAAAAAAAUAAAD//wEAAAABAAUAAAD//wIAAAAAAAcAAAD//wMAAAAAAAcAAAD//wQAAAAAAAcAAAD//wUAAAAAAAcAAAD//wYAAAAAAAcAAAD//wcAAAAAAAcAAAAAAP//AAAAAAUAAAAAAAAAAAAAAAUAAAAAAAEAAAABAAUAAAAAAAIAAAAAAAcAAAAAAAMAAAAAAAcAAAAAAAQAAAAAAAcAAAAAAAUAAAAAAAcAAAAAAAYAAAAAAAcAAAAAAAcAAAAAAAcAAAABAP//AAAAAAUAAAABAAAAAAAAAAUAAAABAAEAAAABAAUAAAABAAIAAAAAAAcAAAABAAMAAAAAAAcAAAABAAQAAAAAAAcAAAABAAUAAAAAAAcAAAABAAYAAAAAAAcAAAABAAcAAAAAAAcAAAACAP//AAAAAAUAAAACAAAAAAAAAAUAAAACAAEAAAABAAUAAAACAAIAAAAAAAcAAAACAAMAAAAAAAcAAAACAAQAAAAAAAcAAAACAAUAAAAAAAcAAAACAAYAAAAAAAcAAAACAAcAAAAAAAcAAAADAP//AAAAAAUAAAADAAAAAAAAAAUAAAADAAEAAAABAAUAAAADAAIAAAAAAAcAAAADAAMAAAAAAAcAAAADAAQAAAAAAAcAAAADAAUAAAAAAAcAAAADAAYAAAAAAAcAAAADAAcAAAAAAAcAAAAEAP//AAAAAAUAAAAEAAAAAAAAAAUAAAAEAAEAAAABAAUAAAAEAAIAAAAAAAcAAAAEAAMAAAAAAAcAAAAEAAQAAAAAAAcAAAAEAAUAAAAAAAcAAAAEAAYAAAAAAAcAAAAEAAcAAAAAAAcAAAAFAP//AAAAAAUAAAAFAAAAAAAAAAUAAAAFAAEAAAABAAUAAAAFAAIAAAAAAAcAAAAFAAMAAAAAAAcAAAAFAAQAAAAAAAcAAAAFAAUAAAAAAAcAAAAFAAYAAAAAAAcAAAAFAAcAAAAAAAcAAAAGAP//AAAAAAUAAAAGAAAAAAAAAAUAAAAGAAEAAAABAAUAAAAGAAIAAAAAAAcAAAAGAAMAAAAAAAcAAAAGAAQAAAAAAAcAAAAGAAUAAAAAAAcAAAAGAAYAAAAAAAcAAAAGAAcAAAAAAAcAAAAHAP//AAAAAAUAAAAHAAAAAAAAAAUAAAAHAAEAAAABAAUAAAAHAAIAAAAAAAcAAAAHAAMAAAAAAAcAAAAHAAQAAAAAAAcAAAAHAAUAAAAAAAcAAAAHAAYAAAAAAAcAAAAHAAcAAAAAAAcAAAAIAP//AAAAAAUAAAAIAAAAAAAAAAUAAAAIAAEAAAABAAUAAAAIAAIAAAAAAAcAAAAIAAMAAAAAAAcAAAAIAAQAAAAAAAcAAAAIAAUAAAAAAAcAAAAIAAYAAAAAAAcAAAAIAAcAAAAAAAcAAAA=")
tile_set = SubResource("TileSet_k6v4e")

[node name="DungeonTilesDetails" type="TileMapLayer" parent="Background/F3/Dungeon1"]
tile_map_data = PackedByteArray("AAD9/wIAAAAHABAAAAAFAAEAAAAFABAAAAD//wMAAAAAABYAAAD8/wMAAAABABYAAAD8/wUAAAABABUAAAAEAAIAAAABABUAAAAHAAIAAAAFABEAAAADAAYAAAAKABMAAAAHAAUAAAAKABMAAAADAAQAAAAGAAoAAAABAAYAAAAGAAoAAAD//wIAAAAEAAoAAAD8/wIAAAAFAAoAAAD//wEAAAAGABAAAAA=")
tile_set = SubResource("TileSet_k6v4e")

[node name="F4" type="Node2D" parent="Background"]
visible = false

[node name="Dungeon1" type="TileMapLayer" parent="Background/F4"]
position = Vector2(12, -28)
scale = Vector2(5, 5)
tile_map_data = PackedByteArray("AAD7/wYAAAAAAAsAAAD6////AAAAAAQAAAD6/wAAAAAAAAQAAAD6/wEAAAABAAQAAAD6/wIAAAAAAAsAAAD6/wMAAAAAAAsAAAD6/wQAAAAAAAsAAAD6/wUAAAAAAAsAAAD6/wYAAAAAAAsAAAD6/wcAAAAAAAsAAAD7////AAAAAAQAAAD7/wAAAAAAAAQAAAD7/wEAAAABAAQAAAD7/wIAAAAAAAsAAAD7/wMAAAAAAAsAAAD7/wQAAAAAAAsAAAD7/wUAAAAAAAsAAAD7/wcAAAAAAAsAAAD8////AAAAAAQAAAD8/wAAAAAAAAQAAAD8/wEAAAABAAQAAAD8/wIAAAAAAAsAAAD8/wMAAAAAAAsAAAD8/wQAAAAAAAsAAAD8/wUAAAAAAAsAAAD8/wYAAAAAAAsAAAD8/wcAAAAAAAsAAAD9////AAAAAAQAAAD9/wAAAAAAAAQAAAD9/wEAAAABAAQAAAD9/wIAAAAAAAsAAAD9/wMAAAAAAAsAAAD9/wQAAAAAAAsAAAD9/wUAAAAAAAsAAAD9/wYAAAAAAAsAAAD9/wcAAAAAAAsAAAD+////AAAAAAQAAAD+/wAAAAAAAAQAAAD+/wEAAAABAAQAAAD+/wIAAAAAAAsAAAD+/wMAAAAAAAsAAAD+/wQAAAAAAAsAAAD+/wUAAAAAAAsAAAD+/wYAAAAAAAsAAAD+/wcAAAAAAAsAAAD/////AAAAAAQAAAD//wAAAAAAAAQAAAD//wEAAAABAAQAAAD//wIAAAAAAAsAAAD//wMAAAAAAAsAAAD//wQAAAAAAAsAAAD//wUAAAAAAAsAAAD//wYAAAAAAAsAAAD//wcAAAAAAAsAAAAAAP//AAAAAAQAAAAAAAAAAAAAAAQAAAAAAAEAAAABAAQAAAAAAAIAAAAAAAsAAAAAAAMAAAAAAAsAAAAAAAQAAAAAAAsAAAAAAAUAAAAAAAsAAAAAAAYAAAAAAAsAAAAAAAcAAAAAAAsAAAABAP//AAAAAAQAAAABAAAAAAAAAAQAAAABAAEAAAABAAQAAAABAAIAAAAAAAsAAAABAAMAAAAAAAsAAAABAAQAAAAAAAsAAAABAAUAAAAAAAsAAAABAAYAAAAAAAsAAAABAAcAAAAAAAsAAAACAP//AAAAAAQAAAACAAAAAAAAAAQAAAACAAEAAAABAAQAAAACAAIAAAAAAAsAAAACAAMAAAAAAAsAAAACAAQAAAAAAAsAAAACAAUAAAAAAAsAAAACAAYAAAAAAAsAAAACAAcAAAAAAAsAAAADAP//AAAAAAQAAAADAAAAAAAAAAQAAAADAAEAAAABAAQAAAADAAIAAAAAAAsAAAADAAMAAAAAAAsAAAADAAQAAAAAAAsAAAADAAUAAAAAAAsAAAADAAYAAAAAAAsAAAADAAcAAAAAAAsAAAAEAP//AAAAAAQAAAAEAAAAAAAAAAQAAAAEAAEAAAABAAQAAAAEAAIAAAAAAAsAAAAEAAMAAAAAAAsAAAAEAAQAAAAAAAsAAAAEAAUAAAAAAAsAAAAEAAYAAAAAAAsAAAAEAAcAAAAAAAsAAAAFAP//AAAAAAQAAAAFAAAAAAAAAAQAAAAFAAEAAAABAAQAAAAFAAIAAAAAAAsAAAAFAAMAAAAAAAsAAAAFAAQAAAAAAAsAAAAFAAUAAAAAAAsAAAAFAAYAAAAAAAsAAAAFAAcAAAAAAAsAAAAGAP//AAAAAAQAAAAGAAAAAAAAAAQAAAAGAAEAAAABAAQAAAAGAAIAAAAAAAsAAAAGAAMAAAAAAAsAAAAGAAQAAAAAAAsAAAAGAAUAAAAAAAsAAAAGAAYAAAAAAAsAAAAGAAcAAAAAAAsAAAAHAP//AAAAAAQAAAAHAAAAAAAAAAQAAAAHAAEAAAABAAQAAAAHAAIAAAAAAAsAAAAHAAMAAAAAAAsAAAAHAAQAAAAAAAsAAAAHAAUAAAAAAAsAAAAHAAYAAAAAAAsAAAAHAAcAAAAAAAsAAAAIAP//AAAAAAQAAAAIAAAAAAAAAAQAAAAIAAEAAAABAAQAAAAIAAIAAAAAAAsAAAAIAAMAAAAAAAsAAAAIAAQAAAAAAAsAAAAIAAUAAAAAAAsAAAAIAAYAAAAAAAsAAAAIAAcAAAAAAAsAAAA=")
tile_set = SubResource("TileSet_k6v4e")

[node name="DungeonTilesDetails" type="TileMapLayer" parent="Background/F4/Dungeon1"]
tile_map_data = PackedByteArray("AAD+/wEAAAADABAAAAAGAAEAAAADABAAAAAEAAIAAAAHABAAAAD8/wIAAAAEABEAAAAHAAIAAAACABEAAAD//wIAAAADAAsAAAD8/wMAAAABAAsAAAACAAYAAAADAAsAAAAEAAQAAAACAAsAAAAHAAMAAAABAAsAAAD//wMAAAAGAAoAAAADAAYAAAAFAAoAAAD8/wUAAAABABUAAAD+/wIAAAABABYAAAAAAAYAAAAAABYAAAA=")
tile_set = SubResource("TileSet_k6v4e")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 980.0
offset_top = 491.0
offset_right = 980.0
offset_bottom = 491.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 4

[node name="Event" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -675.0
offset_top = -413.0
offset_right = 675.0
offset_bottom = 413.0
grow_horizontal = 2
grow_vertical = 2

[node name="EventText" type="Label" parent="Control/Event"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -446.5
offset_top = -229.0
offset_right = 468.5
offset_bottom = -58.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_nvkye")
theme_override_font_sizes/font_size = 32
text = "Here goes text for random item"
horizontal_alignment = 1
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Event"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -604.0
offset_top = 38.0
offset_right = 604.0
offset_bottom = 211.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Button" type="Button" parent="Control/Event/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_nvkye")
theme_override_font_sizes/font_size = 32
text = "Option 1"
autowrap_mode = 2

[node name="Button2" type="Button" parent="Control/Event/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_nvkye")
theme_override_font_sizes/font_size = 32
text = "Option 2"
autowrap_mode = 2

[node name="Button3" type="Button" parent="Control/Event/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_nvkye")
theme_override_font_sizes/font_size = 32
text = "Option 3"
autowrap_mode = 2

[node name="Resolution" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -675.0
offset_top = -413.0
offset_right = 675.0
offset_bottom = 413.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResolutionText" type="Label" parent="Control/Resolution"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -446.5
offset_top = -229.0
offset_right = 468.5
offset_bottom = -58.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_nvkye")
theme_override_font_sizes/font_size = 32
text = "Here goes text for random item"
horizontal_alignment = 1
autowrap_mode = 2

[node name="PlayerDied" parent="." instance=ExtResource("4_ahxs1")]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 985.0
offset_top = 469.0
offset_right = 985.0
offset_bottom = 469.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="Control/Event/HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Control/Event/HBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Control/Event/HBoxContainer/Button3" to="." method="_on_button_3_pressed"]
